k8s/apps/vault/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: keycloak
  labels:
    app: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:1.15.2
          args:
            - "server"
            - "-dev"
          ports:
            - containerPort: 8200
