k8s/apps/vault/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: keycloak
spec:
  ports:
    - port: 8200
      targetPort: 8200
  selector:
    app: vault
