k8s/apps/vault/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: keycloak
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vault.armleth.fr`)
      services:
        - name: vault
          port: 8200
  tls:
    secretName: armleth-tls-secret
